Fix horizontal scrolling

--- a/src/static/css/index.scss
+++ b/src/static/css/index.scss
@@ -76,3 +76,8 @@ a {
 .selectedTeam {
   background-color: $SUCCESS_COLOR !important;
 }
+
+.MuiGridList-root {
+  margin: 0 !important;
+  margin-top: 1.2% !important;
+}
